Lecture des fichiers JSON des gabarits de cartes et des personnages et ajout d'un premier gabarit de carte et d'un premier personnage

--- a/.classpath
+++ b/.classpath
@@ -16,6 +16,7 @@
 	<classpathentry kind="lib" path="lib/natives-linux.jar"/>
 	<classpathentry kind="lib" path="lib/natives-mac.jar"/>
 	<classpathentry kind="lib" path="lib/natives-windows.jar"/>
+	<classpathentry kind="lib" path="lib/org.json.jar"/>
 	<classpathentry kind="lib" path="lib/slick-examples.jar"/>
 	<classpathentry kind="lib" path="lib/slick.jar"/>
 	<classpathentry kind="lib" path="lib/tinylinepp.jar"/>
