Fond transparent des réponses et préparation de la save

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,4 @@
 eclipse.preferences.version=1
+encoding//res/data/cardTemplates.json=UTF-8
+encoding//res/data/characters.json=UTF-8
 encoding/<project>=UTF-8
